@@ -1,0 +1,17 @@
+<?php
+
+return [
+    'frontend' => [
+        'jambagecom/agency/preprocessing' => [
+            'target' => \JambageCom\Agency\Middleware\FrontendHooks::class,
+            'description' => 'Initialisation of global variables for hooks',
+            'after' => [
+                'typo3/cms-frontend/tsfe'
+            ],
+            'before' => [
+                'typo3/cms-frontend/prepare-tsfe-rendering'
+            ]
+        ]
+    ]
+];
+
