@@ -1,0 +1,6 @@
+services:
+  JambageCom\Agency\EventListener\PageContentPreviewRenderingListener:
+    tags:
+      - name: event.listener
+        identifier: 'agencyCodeListener'
+        event: TYPO3\CMS\Backend\View\Event\PageContentPreviewRenderingEvent
