@@ -1,6 +1,8 @@
 <?php
 defined('TYPO3') || die('Access denied.');
 
+use JambageCom\Agency\Constants\Extension;
+
 call_user_func(function($extensionKey, $table)
 {
     \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addStaticFile(
@@ -8,4 +10,4 @@ call_user_func(function($extensionKey, $table)
         'Configuration/TypoScript/PluginSetup/',
         'Agency Registration'
     );
-}, 'agency', basename(__FILE__, '.php'));
+}, Extension::KEY, basename(__FILE__, '.php'));
